--- a/nasu/resources/css/app.css
+++ b/nasu/resources/css/app.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Major+Mono+Display&family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+.font-title {
+    font-family: "Major Mono Display", monospace;
+}
+
+.font-body {
+    font-family: "Mali", cursive;
+}
+
+.font-code {
+    font-family: "Anonymous Pro", monospace;
+}
+
 /* Custom drag-and-drop feedback */
 .furniture-item:active {
     opacity: 0.6;
@@ -11,4 +24,3 @@
     background-image: radial-gradient(circle, #ddd 1px, transparent 1px);
     background-size: 20px 20px;
 }
-
