--- a/nasu/resources/css/styles.css
+++ b/nasu/resources/css/styles.css
@@ -1,14 +1,25 @@
 @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Major+Mono+Display&family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 .font-title {
-  font-family: "Major Mono Display", monospace;
+    font-family: "Major Mono Display", monospace;
 }
 
 .font-body {
-  font-family: "Mali", cursive;
+    font-family: "Mali", cursive;
 }
 
 .font-code {
-  font-family: "Anonymous Pro", monospace;
+    font-family: "Anonymous Pro", monospace;
+}
+
+.peer:focus ~ .peer-focus\:translate-y-\[-12px\] {
+    transform: translateY(-12px);
+}
+
+.peer:not(:placeholder-shown) ~ .peer-placeholder-shown\:top-2 {
+    top: -0.5rem;
+    font-size: 0.875rem;
+    color: #97d5ca;
+    padding: 0 0.25rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
