--- a/nasu/resources/css/app.css
+++ b/nasu/resources/css/app.css
@@ -1,21 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Major+Mono+Display&family=Mali:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.font-title {
+/* .font-title {
     font-family: "Major Mono Display", monospace;
 }
 
 .font-body {
-    font-family: "Mali", cursive;
+  font-family: 'Playwrite GB S', serif; 
 }
 
 .font-code {
     font-family: "Anonymous Pro", monospace;
+} */
+
+.font-title {
+    font-family: "Montserrat", sans-serif;
+    font-weight: lighter;
 }
 
+.font-body {
+  font-family: 'Mali', cursive; 
+}
+
+.font-code {
+    font-family: "Space Mono", monospace;
+    font-weight: lighter;
+}
 
 /* Custom drag-and-drop feedback */
 .furniture-item:active {
