--- a/nasu/resources/css/app.css
+++ b/nasu/resources/css/app.css
@@ -19,7 +19,8 @@
 
 .font-title {
     font-family: "Montserrat", sans-serif;
-    font-weight: lighter;
+    font-weight: 200;
+    font-size: 2rem;
 }
 
 .font-body {
