--- a/nasu/resources/css/styles.css
+++ b/nasu/resources/css/styles.css
@@ -9,4 +9,11 @@
     padding: 0 0.25rem;
 }
 
+h1 {
+    text-transform: uppercase; 
+    font-size: 1.25rem; 
+    text-align: center; 
+    margin-bottom: 1.5rem;
+}
+
 /*# sourceMappingURL=styles.css.map */
