--- a/nasu/resources/css/styles.css
+++ b/nasu/resources/css/styles.css
@@ -12,7 +12,7 @@
 .peer:not(:placeholder-shown) ~ .peer-placeholder-shown\:top-2 {
     top: -0.5rem;
     font-size: 0.875rem;
-    color: #97d5ca;
+    color: var(--secondary-color);
     padding: 0 0.25rem;
 }
 
@@ -21,6 +21,12 @@ h1 {
     font-size: 1.25rem;
     text-align: center;
     margin-bottom: 1.5rem;
+}
+
+.container{
+    min-height: 78vh;
+    border: solid 2px red;
+    margin-top: 1.5rem;
 }
 
 .page {
